Code clean-up
* Use wild card as types instead of raw param type for Class
* Use String instead of StringBuilder when trying to build a 
String wherein there is no iterations
* Favour streams over iterators
* don’t use “newInstance()”